--- a/Store/Home.html
+++ b/Store/Home.html
@@ -3,7 +3,9 @@
 <Title>Ardronix</Title>
 </Head>
 <Body>
-<a href="https://www.w3schools.com/">Home</a>
+<a href="https://keshavm30.github.io/Website/Store/Home.html">Home</a>
+<a href="">Store</a>
+  <a href="">Store</a>
 </Body>
 </HTML>
 
