--- a/Store/Home.html
+++ b/Store/Home.html
@@ -4,8 +4,8 @@
 </Head>
 <Body>
 <a href="https://keshavm30.github.io/Website/Store/Home.html">Home</a>
-<a href="">Store</a>
-  <a href="">Store</a>
+<a href="https://www.google.com/">Store</a>
+  <a href="https://www.google.com/">Store</a>
 </Body>
 </HTML>
 
