--- a/Store/Home.html
+++ b/Store/Home.html
@@ -3,9 +3,13 @@
 <Title>Ardronix</Title>
 </Head>
 <Body>
+<style>
+ a{text-align: center;}
+ </style>
 <a href="https://keshavm30.github.io/Website/Store/Home.html">Home</a>
 <a href="https://www.google.com/">Store</a>
-  <a href="https://www.google.com/">Store</a>
+<a href="https://www.google.com/">About Us</a>
+  
 </Body>
 </HTML>
 
