--- a/Store/Home.html
+++ b/Store/Home.html
@@ -6,9 +6,9 @@
 <style>
  a{text-align: center;}
  </style>
-<a href="https://keshavm30.github.io/Website/Store/Home.html">Home</a>
-<a href="https://www.google.com/">Store</a>
-<a href="https://www.google.com/">About Us</a>
+<a href="https://keshavm30.github.io/Website/Store/Home.html">Home align="middle"</a>
+<a href="https://www.google.com/">Store align="middle"</a>
+<a href="https://www.google.com/">About Us align="middle"</a>
   
 </Body>
 </HTML>
