--- a/Store/ordered.html
+++ b/Store/ordered.html
@@ -118,7 +118,7 @@ body {
 				<p class="text-center">Your order has been confirmed. Check your email for detials.</p>
 			</div>
 			<div class="modal-footer">
-				<button class="btn btn-success btn-block" data-dismiss="modal" onclick="window.location.href = 'https://ide.geeksforgeeks.org';" >OK</button>
+				<button class="btn btn-success btn-block" data-dismiss="modal" onclick="window.location.href = 'https://keshavm30.github.io/Website/Store/Home.html';" >OK</button>
 			</div>
 		</div>
 	</div>
