--- a/Store/Home.html
+++ b/Store/Home.html
@@ -3,15 +3,10 @@
 <Title>Ardronix</Title>
 </Head>
 <Body>
-<style>
- a{text-align: center;}
- </style>
-<a href="https://keshavm30.github.io/Website/Store/Home.html">Home</a>
-<a href="https://www.google.com/">Store</a>
-<a href="https://www.google.com/">About Us</a>
+<img src="https://raw.githubusercontent.com/Keshavm30/Website/main/Store/Capture-removebg-preview.png" Hight=5% Width=5% align=Middle>
+<a href="https://keshavm30.github.io/Website/Store/Home.html">Home</a> &nbsp;
+<a href="https://www.google.com/">Store</a> &nbsp;
+<a href="https://www.google.com/">About Us</a> &nbsp;
   
 </Body>
 </HTML>
-
-
-
