--- a/Store/Store.html
+++ b/Store/Store.html
@@ -1,7 +1,12 @@
 <html>
   <head>
+    <Title>STORE</Title>
   </head>
   <body>
+    <img src="https://raw.githubusercontent.com/Keshavm30/Website/main/Store/Capture-removebg-preview.png" Hight=5% Width=5% align=Middle>
+<a href="https://keshavm30.github.io/Website/Store/Home.html">Home</a> &nbsp;
+<a href="https://keshavm30.github.io/Website/Store/Store.html">Store</a> &nbsp;
+<a href="https://www.google.com/">About Us</a> &nbsp; </BR>
     <div>
       <ul class="S4WbK_ c2Zj9x HDmL7L" 
           data-hook="product-list-wrapper" 
