--- a/Store/Home.html
+++ b/Store/Home.html
@@ -6,7 +6,7 @@
 <img src="https://raw.githubusercontent.com/Keshavm30/Website/main/Store/Capture-removebg-preview.png" Hight=5% Width=5% align=Middle>
 <a href="https://keshavm30.github.io/Website/Store/Home.html">Home</a> &nbsp;
 <a href="https://keshavm30.github.io/Website/Store/Store.html">Store</a> &nbsp;
-<a href="https://www.google.com/">About Us</a> &nbsp;
+<a href="https://www.google.com/">About Us</a> &nbsp;</BR>
   
 </Body>
 </HTML>
