--- a/Store/Home.html
+++ b/Store/Home.html
@@ -13,5 +13,13 @@
   src="https://cdn2.woxo.tech/a.js#62f62dbb44dd35e937ff9776" 
   async data-usrc>
 </script>
+ 
+ <div data-mc-src="ce196a51-2f01-446e-9ad9-8d72beb11bb3#instagram"></div>
+        
+<script 
+  src="https://cdn2.woxo.tech/a.js#62f62dbb44dd35e937ff9776" 
+  async data-usrc>
+</script>
+ 
 </Body>
 </HTML>
