--- a/Store/Store.html
+++ b/Store/Store.html
@@ -30,7 +30,7 @@
             <a href="https://rzp.io/l/fEoNuHIoj2" tabindex="-1" class="oQUvqL x5qIv3" data-hook="product-item-container">
               <div class="BEmRci heightByImageRatio heightByImageRatio2" data-hook="product-item-images" style="">
                 <div class="UwyFnz bu1EvQ naMHY_" data-hook="product-thumbnail-wrapper">
-                  <img class="ha6XCD v_lwe5 KJe3mO" data-hook="wix-media-image" src="https://pbs.twimg.com/profile_images/1498641868397191170/6qW2XkuI_400x400.png" alt="All in One Home Automation Project" aria-hidden="false">
+                  <img class="ha6XCD v_lwe5 KJe3mO" data-hook="wix-media-image" src="https://pbs.twimg.com/profile_images/1498641868397191170/6qW2XkuI_400x400.png" alt="All in One Home Automation Project" aria-hidden="false" width="225" height="225">
                 </div></div></a><div data-hook="not-image-container" class="CZ0KIs">
             <a href="https://rzp.io/l/fEoNuHIoj2" class="JPDEZd" data-hook="product-item-product-details-link">
               <div class="t2u_rw VVhXIF" data-hook="product-item-product-details">
