--- a/Store/Store.html
+++ b/Store/Store.html
@@ -36,7 +36,7 @@
             <a href="https://rzp.io/l/fEoNuHIoj2" class="JPDEZd" data-hook="product-item-product-details-link">
               <div class="t2u_rw VVhXIF" data-hook="product-item-product-details">
                 <h3 class="s__8Ol_Dk oY5q0xV---typography-11-runningText oY5q0xV---priority-7-primary syHtuvM FzO_a9" aria-hidden="false" data-hook="product-item-name">(TEST)ALL IN ONE HOME AUTOMATION PROJECT </h3>
-                <div class="UqnnNN"><span class="ruX1QG" data-hook="sr-product-item-price-to-pay">Price <id="Price_1"> </span>₹<span data-hook="product-item-price-to-pay" class="cfpn1d">1.00</span></div></div></a></div></div></li></BR>
+                <div class="UqnnNN"><span class="ruX1QG" data-hook="sr-product-item-price-to-pay">Price </span>₹<span id="Price_1" data-hook="product-item-price-to-pay" class="cfpn1d">1.00</span></div></div></a></div></div></li></BR>
       <a href="https://rzp.io/l/fEoNuHIoj2"><img src="https://raw.githubusercontent.com/Keshavm30/Website/main/Store/Buy%20now.png" alt="HTML tutorial" style="width:7%;height:5%;"></a>
      
 
@@ -47,7 +47,7 @@
 <script>
 var options = {
     "key": "rzp_test_2PYWidfO1ANLqJ", // Enter the Key ID generated from the Dashboard
-    "amount": 500000, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+    "amount": Price_1, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
     "currency": "INR",
     "name": "Acme Corp",
     "description": "Test Transaction",
