--- a/Store/Store.html
+++ b/Store/Store.html
@@ -47,7 +47,7 @@
 <script>
 var options = {
     "key": "rzp_test_2PYWidfO1ANLqJ", // Enter the Key ID generated from the Dashboard
-    "amount": Price_1, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+    "amount": Price_1*100, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
     "currency": "INR",
     "name": "Acme Corp",
     "description": "Test Transaction",
