--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -1,9 +1,11 @@
 <HTML>
 <Head>
-<script>
-  setTimeout(function() {
-      window.close()
-  }, 5000);
+<script type="text/javascript">
+setTimeout(
+function ( )
+{
+  self.close();
+}, 5000 );
 </script>
 </Head>
 <Body>
