--- a/Razorpay_Payment/Processing.html
+++ b/Razorpay_Payment/Processing.html
@@ -1,2 +1,2 @@
-<Center><img src="image_processing20200723-17135-1ymgl9.gif" width="60%" height="100%">
+<Center><img src="image_processing20200723-17135-1ymgl9.gif">
 <meta http-equiv="refresh" content="13;url=https://keshavm30.github.io/Website/Razorpay_Payment/Done.html" />
