--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -1,11 +1,9 @@
 <HTML>
 <Head>
-<script type="text/javascript">
-setTimeout(
-function ( )
-{
-  self.close();
-}, 5000 );
+<script>
+  setTimeout(function() {
+      window.close()
+  }, 6000);
 </script>
 </Head>
 <Body>
