--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -1,9 +1,10 @@
 <HTML>
 <Head>
 <script>
-  setTimeout(function() {
-      window.close()
-  }, 6000);
+  function waitFiveSec(){
+    setTimeout(function, 6000) /*(here you need to implement delay code)*/
+    window.close();
+  }
 </script>
 </Head>
 <Body>
