--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -4,11 +4,15 @@
 </Head>
 <Body>
 <Center><img src="icon-256x256.gif">
-  <script>
+ onload="waitFiveSec()"> <!--it will wait to load-->
+
+<!-- your html... -->
+<script>
   function waitFiveSec(){
-    setTimeout(function, 6000) /*(here you need to implement delay code)*/
+    setTimeout(function, milliseconds) /*(here you need to implement delay code)*/
     window.close();
   }
+</script>
 </script>
 </Body>
 </HTML>
