--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -9,7 +9,7 @@
 <!-- your html... -->
 <script>
   function waitFiveSec(){
-    setTimeout(function, milliseconds) /*(here you need to implement delay code)*/
+    setTimeout(function, 5000) /*(here you need to implement delay code)*/
     window.close();
   }
 </script>
