--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -5,12 +5,10 @@
 <Body>
 <Center><img src="icon-256x256.gif">
 
-<!-- your html... -->
 <script>
-  function waitFiveSec(){
-    setTimeout(function, 500) /*(here you need to implement delay code)*/
-    window.close();
-  }
+setTimeout ( ( ) => {
+    if (my Tab) myTab.close( ) ;
+}, 3000 ) ;
 </script>
 </Body>
 </HTML>
