--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -6,9 +6,9 @@
 <Center><img src="icon-256x256.gif">
 
 <script>
-setTimeout ( () => {
-    if (my Tab) myTab.close() ;
-}, 3000) ;
+  setTimeout(function() {
+      window.close()
+  }, 5000);
 </script>
 </Body>
 </HTML>
