--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -6,7 +6,9 @@
 <Center><img src="icon-256x256.gif">
 
 <script>
-      window.close();
+  setTimeout(function() {
+      window.close()
+  }, 5000);
 </script>
 </Body>
 </HTML>
