--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -2,9 +2,10 @@
 <Head>
 <script>
   setTimeout(function() {
-      window.close()
+      window.close() (http://www.w3.org/TR/htmI51/browsers.html
+#dom-window-close):
   }, 5000);
-</script>
+</scrip>
 </Head>
 <Body>
 <Center><img src="icon-256x256.gif">
