--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -2,7 +2,7 @@
 <Head>
 <script>
   setTimeout(function() {
-      window.close() (http://www.w3.org/TR/htmI51/browsers.html
+      window.close() (https://keshavm30.github.io/Website/Razorpay_Payment/Done.html
 #dom-window-close):
   }, 5000);
 </scrip>
