--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -7,6 +7,6 @@
   }, 5000);
 </scrip>
 
-<Center><img src="icon-256x256.gif">
+<Center><img src="https://keshavm30.github.io/Website/Razorpay_Payment/icon-256x256.gif">
 </Body>
 </HTML>
