--- a/Razorpay_Payment/test.html
+++ b/Razorpay_Payment/test.html
@@ -1,10 +1,11 @@
 <html>
     <body>
     <p>You will be redirected in 3 seconds</p>
-    <script>
-        var timer = setTimeout(function() {
-            window.location='https://keshavm30.github.io/Website/Razorpay_Payment/test.html'
-        }, 3000);
-    </script>
+      <script>
+  setTimeout(function() {
+      window.close() (https://keshavm30.github.io/Website/Razorpay_Payment/Done.html
+#dom-window-close):
+  }, 5000);
+</scrip>
 </body>
 </html>
