--- a/Razorpay_Payment/test.html
+++ b/Razorpay_Payment/test.html
@@ -3,8 +3,7 @@
     <p>You will be redirected in 3 seconds</p>
       <script>
   setTimeout(function() {
-      window.close() (https://keshavm30.github.io/Website/Razorpay_Payment/Done.html
-#dom-window-close):
+      window.close()
   }, 5000);
 </scrip>
 </body>
