--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -1,8 +1,12 @@
 <HTML>
   <Body>
     <Center><img src="https://keshavm30.github.io/Website/Razorpay_Payment/icon-256x256.gif">
- setTimeout(function(){
+ <script>
+
+      setTimeout(function(){
             window.location.href = 'https://rzp.io/l/umH24P5H';
          }, 6000);
+   <script>
+
 </Body>
 </HTML>
