--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -6,7 +6,7 @@
       setTimeout(function(){
             window.location.href = 'https://rzp.io/l/umH24P5H';
          }, 6000);
-   <script>
+   </script>
 
 </Body>
 </HTML>
