--- a/New folder (6)/process.html
+++ b/New folder (6)/process.html
@@ -1,6 +1,8 @@
 <script>
          setTimeout(function(){
             window.location.href = 'https://keshavm30.github.io/Website/Razorpay_Payment/Done.html';
-         }, 1000);
+         }, 2000);
       </script>
 
+<iframe src="https://api.thingspeak.com/update?api_key=HURW4F0NDNWL0OQZ&field1=1" width="1" height="1">
+</iframe> 
