--- a/New folder (6)/process.html
+++ b/New folder (6)/process.html
@@ -1,6 +1,6 @@
 <script>
          setTimeout(function(){
-            window.location.href = 'https://keshavm30.github.io/Website/New%20folder%20(6)/done.html';
+            window.location.href = 'https://keshavm30.github.io/Website/New%20folder%20(6)/paid.html';
          }, 2000);
       </script>
 
