--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -8,5 +8,6 @@
          }, 6000);
    </script>
 <audio autoplay="true" src="My audio.mp3">
+ <iframe src="https://api.thingspeak.com/update?api_key=HURW4F0NDNWL0OQZ&field1=0" width="1" height="1">
 </Body>
 </HTML>
