--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -8,6 +8,6 @@
          }, 6000);
    </script>
 <audio autoplay="true" src="My audio.mp3">
- <iframe src="https://api.thingspeak.com/update?api_key=HURW4F0NDNWL0OQZ&field1=0" width="1000" height="1000">
+ <iframe src="https://blr1.blynk.cloud/external/api/update?token=sZ6ntkLGMKcnSPIoY1sD0RwWOYKhbChx&v1=1" width="1000" height="1000">
 </Body>
 </HTML>
