--- a/Razorpay_Payment/Done.html
+++ b/Razorpay_Payment/Done.html
@@ -4,7 +4,7 @@
  <script>
 
       setTimeout(function(){
-            window.location.href = 'https://rzp.io/l/umH24P5H';
+            window.location.href = 'https://keshavm30.github.io/Website/Razorpay_Payment/Order.html';
          }, 6000);
    </script>
 <audio autoplay="true" src="My audio.mp3">
