Update Show QR Code.html

--- a/Razorpay_Payment/Show QR Code.html
+++ b/Razorpay_Payment/Show QR Code.html
@@ -112,7 +112,7 @@
 			of src attribute */
 			let image = document.getElementById("image");
 
-			image.src ="download.png"
+			image.src ="QR code.png"
 
 			document.getElementById("btnID")
 					.style.display = "none";
